overloaded calculateBonus method in Employee class, created EmployeeManager, main method coded to test that all is working